# easy-sqlx

./: Cargo.toml  README.md
easy-sqlx-core/: Cargo.toml
easy-sqlx-core/src/: lib.rs
easy-sqlx-core/src/sql/: mod.rs
easy-sqlx-core/src/sql/builder/: builder.rs  condition.rs  delete_builder.rs  easy_insert_builder.rs  insert_builder.rs  mod.rs  pair.rs  select_builder.rs  update_builder.rs
easy-sqlx-core/src/sql/dialects/: condition.rs  context.rs  mod.rs  page.rs  quote.rs
easy-sqlx-core/src/sql/dialects/schema/: mod.rs  schema.rs
easy-sqlx-core/src/sql/dialects/schema/postgres/: column.rs  index.rs  mod.rs  schema.rs  table.rs  upgrade.rs
easy-sqlx-core/src/sql/schema/: column.rs  index.rs  mod.rs  table.rs
easy-sqlx-core/src/sql/schema/types/: mod.rs  postgres.rs  rust_types.rs  sql_types.rs  types.rs
easy-sqlx-core/src/sql/utils/: mod.rs  pair.rs  quote.rs  value.rs
easy-sqlx-core/src/sync/: mod.rs
easy-sqlx-macro/: Cargo.toml
easy-sqlx-macro/src/: condition.rs  delete.rs  field.rs  insert.rs  lib.rs  order.rs  select.rs  update.rs
easy-sqlx-macro/src/attrs/: column.rs  table.rs
easy-sqlx-utils/: Cargo.toml
easy-sqlx-utils/src/: lib.rs  option_parser.rs  ternary.rs  value_parser.rs
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
