[package]
name = "easy-sqlx-core"
version = "0.1.0"
edition = "2021"
# edition.workspace = true
rust-version.workspace = true

[features]
default = ["postgres", "chrono"]
postgres = []
chrono = []

[dependencies]
easy-sqlx-utils = { path = "../easy-sqlx-utils" }
regex.workspace = true
chrono.workspace = true
pilota.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

syn = { workspace = true, features = ["full"] }
quote.workspace = true
proc-macro2.workspace = true

sqlx.workspace = true
sqlx-core.workspace = true
# sqlx-postgres.workspace = true
